update: Corrige DTOs