@@ -1,8 +1,12 @@
 package org.grupo1.gestordereceitas.dto.mapper;
 
-import org.grupo1.gestordereceitas.dto.ReceitaDTO;
+import org.grupo1.gestordereceitas.dto.ReceitaRequestDTO;
+import org.grupo1.gestordereceitas.dto.ReceitaResponseDTO;
 import org.grupo1.gestordereceitas.dto.ReceitaIngredienteDTO;
+import org.grupo1.gestordereceitas.model.Categoria;
+import org.grupo1.gestordereceitas.model.Ingrediente;
 import org.grupo1.gestordereceitas.model.Receita;
+import org.grupo1.gestordereceitas.model.ReceitaIngrediente;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
@@ -11,7 +15,11 @@ import java.util.List;
 @Component
 public class ReceitaMapper {
 
-/*    public static Receita toEntity(ReceitaRequestDTO dto, Categoria categoria, List<Ingrediente> ingredientesDisponiveis) {
+    public static Receita toEntity(
+            ReceitaRequestDTO dto,
+            Categoria categoria,
+            List<Ingrediente> ingredientesDisponiveis
+    ) {
         Receita receita = new Receita();
         receita.setNome(dto.getNome());
         receita.setDescricao(dto.getDescricao());
@@ -19,31 +27,33 @@ public class ReceitaMapper {
         receita.setCategoria(categoria);
 
         if (dto.getIngredientes() != null) {
-            List<ReceitaIngrediente> receitaIngredientes = dto.getIngredientes()
-                    .stream()
+            List<ReceitaIngrediente> receitaIngredientes = dto.getIngredientes().stream()
                     .map(i -> {
                         ReceitaIngrediente ri = new ReceitaIngrediente();
                         ri.setReceita(receita);
 
-                        // Busca o ingrediente na lista de disponíveis (ou de um repositório)
+                        // Busca o ingrediente pelo ID enviado no DTO
                         Ingrediente ingrediente = ingredientesDisponiveis.stream()
                                 .filter(ing -> ing.getId().equals(i.getIngredienteId()))
                                 .findFirst()
-                                .orElseThrow(() -> new IllegalArgumentException("Ingrediente não encontrado: " + i.getIngredienteId()));
+                                .orElseThrow(() ->
+                                        new IllegalArgumentException("Ingrediente não encontrado: ID " + i.getIngredienteId()));
 
                         ri.setIngrediente(ingrediente);
                         ri.setQuantidade(i.getQuantidade());
+                        ri.setUnidadeMedida(i.getUnidade());
                         return ri;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
             receita.setReceitaIngredientes(receitaIngredientes);
         }
-        return receita;
-    }*/
 
-    public static ReceitaDTO toDTO(Receita receita) {
-        ReceitaDTO dto = new ReceitaDTO();
+        return receita;
+    }
+
+    public static ReceitaResponseDTO toDTO(Receita receita) {
+        ReceitaResponseDTO dto = new ReceitaResponseDTO();
         dto.setId(receita.getId());
         dto.setNome(receita.getNome());
         dto.setDescricao(receita.getDescricao());
@@ -55,9 +65,10 @@ public class ReceitaMapper {
                     .filter(ri -> ri != null && ri.getIngrediente() != null)
                     .map(ri -> {
                         ReceitaIngredienteDTO ingDTO = new ReceitaIngredienteDTO();
+                        ingDTO.setIngredienteId(ri.getIngrediente().getId());
                         ingDTO.setNome(ri.getIngrediente().getNome());
-                        ingDTO.setQuantidade(ri.getQuantidade() != null ? ri.getQuantidade() : "");
-                        ingDTO.setUnidade(ri.getUnidadeMedida() != null ? ri.getUnidadeMedida() : "");
+                        ingDTO.setQuantidade(ri.getQuantidade());
+                        ingDTO.setUnidade(ri.getUnidadeMedida());
                         return ingDTO;
                     })
                     .toList();
@@ -69,10 +80,10 @@ public class ReceitaMapper {
 
         return dto;
     }
-}
 
-/*    public static List<ReceitaDTO> toDTOList(List<Receita> receitas) {
+    public static List<ReceitaResponseDTO> toDTOList(List<Receita> receitas) {
         return receitas.stream()
                 .map(ReceitaMapper::toDTO)
-                .collect(Collectors.toList());
-    }*/
+                .toList();
+    }
+}
